# nextgsim

./: Cargo.toml  Dockerfile  Dockerfile.all-in-one  Dockerfile.gnb  Dockerfile.gnb-local  Dockerfile.ue  Dockerfile.ue-local  Makefile  README.md  TODO.txt  docker-compose-local.yaml  docker-compose.yaml  rustfmt.toml
.github/workflows/: ci.yml
binaries/: nr-cli  nr-ue
config/: gnb-docker.yaml  gnb-local.yaml  gnb.yaml  ue-docker.yaml  ue-local.yaml  ue.yaml
docker/binaries/: nr-ue
docs/: 6g-gap-analysis.md  architecture.md  cli-usage.md  configuration.md  gap-6g-advanced.md  gap-ai-ml.md  gap-nodes.md  gap-protocols.md  nextgcore-integration.md
k8s/: configmap.yaml  gnb.yaml  ue.yaml
nextgsim-agent/: Cargo.toml
nextgsim-agent/src/: audit.rs  conflict.rs  coordination.rs  execution.rs  learning.rs  lib.rs  nkef_bridge.rs  nwdaf_bridge.rs  safety.rs
nextgsim-ai/: Cargo.toml
nextgsim-ai/src/: config.rs  error.rs  fl_training.rs  inference.rs  isac_pipeline.rs  lib.rs  metrics.rs  model.rs  nr_models.rs  semantic_pipeline.rs  tensor.rs  tflite.rs  xr_traffic.rs
nextgsim-cli/: Cargo.toml
nextgsim-cli/src/: client.rs  loadtest.rs  loadtest_main.rs  main.rs  proc_table.rs  protocol.rs
nextgsim-common/: Cargo.toml
nextgsim-common/src/: bit_buffer.rs  bit_string.rs  cli_server.rs  config.rs  error.rs  lib.rs  logging.rs  octet.rs  octet_string.rs  octet_view.rs  sim_tick.rs  transport.rs  types.rs
nextgsim-crypto/: Cargo.toml
nextgsim-crypto/src/: aes.rs  ecies.rs  hybrid.rs  kdf.rs  lib.rs  milenage.rs  nea.rs  nia.rs  pqc_kem.rs  pqc_sign.rs  snow3g.rs  snow5g.rs  zuc.rs  zuc256.rs
nextgsim-fl/: Cargo.toml
nextgsim-fl/src/: lib.rs  metrics.rs  model_store.rs  semantic_integration.rs  she_integration.rs
nextgsim-gnb/: Cargo.toml
nextgsim-gnb/src/: lib.rs  main.rs  tasks.rs
nextgsim-gnb/src/agent/: mod.rs  task.rs
nextgsim-gnb/src/app/: cli_server.rs  cmd_handler.rs  config_loader.rs  mod.rs  status.rs  task.rs
nextgsim-gnb/src/energy/: mod.rs  task.rs
nextgsim-gnb/src/fl/: mod.rs  task.rs
nextgsim-gnb/src/gtp/: mod.rs  task.rs
nextgsim-gnb/src/isac/: mod.rs  task.rs
nextgsim-gnb/src/ngap/: amf_context.rs  mbs_context.rs  mod.rs  task.rs  ue_context.rs
nextgsim-gnb/src/nkef/: mod.rs  task.rs
nextgsim-gnb/src/nwdaf/: mod.rs  task.rs
nextgsim-gnb/src/rls/: mod.rs  task.rs
nextgsim-gnb/src/rrc/: connection.rs  energy_saving.rs  handover.rs  mod.rs  ntn_gnb.rs  redcap.rs  task.rs  ue_context.rs
nextgsim-gnb/src/sctp/: amf_connection.rs  mod.rs  task.rs
nextgsim-gnb/src/she/: mod.rs  task.rs
nextgsim-gtp/: Cargo.toml
nextgsim-gtp/src/: codec.rs  lib.rs  qos.rs  tunnel.rs
nextgsim-isac/: Cargo.toml
nextgsim-isac/src/: lib.rs  mapping.rs  ml_sensing.rs  saas.rs  she_integration.rs  waveform.rs
nextgsim-nas/: Cargo.toml
nextgsim-nas/src/: capture_tests.rs  codec.rs  eap.rs  enums.rs  header.rs  lib.rs  security.rs
nextgsim-nas/src/ies/: ie1.rs  ie3.rs  ie4.rs  ie6.rs  mod.rs
nextgsim-nas/src/messages/: mod.rs
nextgsim-nas/src/messages/mm/: authentication.rs  deregistration.rs  identity.rs  mod.rs  nas_transport.rs  notification.rs  registration.rs  security_mode.rs  service.rs  status.rs
nextgsim-nas/src/messages/sm/: mod.rs  pdu_session_establishment.rs  pdu_session_modification.rs  pdu_session_release.rs
nextgsim-ngap/: Cargo.toml  build.rs
nextgsim-ngap/src/: capture_tests.rs  codec.rs  lib.rs
nextgsim-nkef/: Cargo.toml
nextgsim-nkef/src/: access.rs  distributed.rs  embedder.rs  events.rs  lib.rs  ontology.rs  query.rs  rag.rs  storage.rs  temporal.rs  vector.rs
nextgsim-nwdaf/: Cargo.toml
nextgsim-nwdaf/src/: analytics_id.rs  anlf.rs  anomaly.rs  coordination.rs  data_collection.rs  dccf.rs  error.rs  event_exposure.rs  federation.rs  lib.rs  llm_analytics.rs  ml_training.rs  model_transfer.rs  mtlf.rs  nkef_bridge.rs  predictor.rs  service.rs
nextgsim-rls/: Cargo.toml
nextgsim-rls/src/: cell_search.rs  codec.rs  lib.rs  protocol.rs  transport.rs
nextgsim-rrc/: Cargo.toml  build.rs
nextgsim-rrc/src/: codec.rs  lib.rs
nextgsim-rrc/src/procedures/: ai_ml_config.rs  conditional_handover.rs  information_transfer.rs  isac_config.rs  isl_handover.rs  measurement_report.rs  mod.rs  ntn_constellation.rs  ntn_integration_example.rs  ntn_link_sim.rs  ntn_timing.rs  rrc_reconfiguration.rs  rrc_reestablishment.rs  rrc_release.rs  rrc_resume.rs  rrc_setup.rs  security_mode.rs  sub_thz_config.rs  system_information.rs  xr_cdrx.rs
nextgsim-sctp/: Cargo.toml
nextgsim-sctp/src/: association.rs  lib.rs  quic.rs  server.rs
nextgsim-semantic/: Cargo.toml
nextgsim-semantic/src/: broadcast.rs  codec.rs  goal.rs  jscc.rs  (+8 more)
nextgsim-she/: Cargo.toml
nextgsim-she/src/: autoscale.rs  error.rs  lib.rs  messages.rs  resource.rs  scheduler.rs  security.rs  sla.rs  task.rs  tier.rs  workload.rs
nextgsim-ue/: Cargo.toml
nextgsim-ue/src/: lib.rs  main.rs  tasks.rs  timer.rs
nextgsim-ue/src/ambient_iot/: fleet.rs  mod.rs
nextgsim-ue/src/app/: cli_handler.rs  config_loader.rs  mod.rs  status.rs  task.rs
nextgsim-ue/src/fl_participant/: mod.rs  task.rs
nextgsim-ue/src/isac_sensor/: mod.rs  task.rs
nextgsim-ue/src/mint/: mod.rs  task.rs
nextgsim-ue/src/nas/: mod.rs
nextgsim-ue/src/nas/mm/: deregistration.rs  mod.rs  state.rs
nextgsim-ue/src/nas/sm/: mod.rs  procedure.rs
nextgsim-ue/src/nwdaf_reporter/: mod.rs  task.rs
nextgsim-ue/src/ranging/: mod.rs  task.rs
nextgsim-ue/src/rls/: mod.rs  task.rs
nextgsim-ue/src/rrc/: cell_selection.rs  handover.rs  measurement.rs  mod.rs  redcap.rs  state.rs  task.rs  uav.rs
nextgsim-ue/src/semantic_codec/: mod.rs  task.rs
nextgsim-ue/src/she_client/: mod.rs  task.rs
nextgsim-ue/src/sidelink/: mod.rs  pc5.rs  positioning.rs  task.rs
nextgsim-ue/src/tun/: config.rs  interface.rs  mod.rs  packet.rs  task.rs
scripts/: add-subscriber.js
tests/: Cargo.toml
tests/src/: ai_integration.rs  cross_crate_integration.rs  e2e_scenario.rs  lib.rs  mock_amf.rs  multi_ue.rs  pdu_session.rs  test_fixtures.rs  test_utils.rs  ue_registration.rs  user_plane.rs
(+16 files in other folders)
