[package]
name = "nextgsim-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for nextgsim"

[lints]
workspace = true

[[bin]]
name = "nr-cli"
path = "src/main.rs"

[[bin]]
name = "nr-loadtest"
path = "src/loadtest_main.rs"

[dependencies]
nextgsim-common.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
