[package]
name = "nextgsim-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic algorithms for nextgsim (Milenage, SNOW3G, ZUC, AES)"

[lints]
workspace = true

[dependencies]
nextgsim-common.workspace = true
aes.workspace = true
ctr.workspace = true
cmac.workspace = true
sha2.workspace = true
hmac.workspace = true
x25519-dalek.workspace = true
rand.workspace = true
thiserror.workspace = true
zuc.workspace = true
