[package]
name = "nextgsim-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic algorithms for nextgsim (Milenage, SNOW3G, ZUC, AES, PQC)"

[lints]
workspace = true

[dependencies]
nextgsim-common.workspace = true
aes.workspace = true
ctr.workspace = true
cmac.workspace = true
elliptic-curve = { version = "0.13", features = ["ecdh", "arithmetic", "sec1"] }
hmac.workspace = true
ml-dsa = "0.1.0-rc.7"
ml-kem = "0.2.0-rc.1"
p256 = { version = "0.13", features = ["ecdh", "arithmetic"] }
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization = "0.1"
x25519-dalek.workspace = true
zuc.workspace = true
