[package]
name = "nextgsim-isac"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Integrated Sensing and Communication (ISAC) - 3GPP TR 22.837 compliant sensing for 6G networks"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
nextgsim-ai = { workspace = true }
nextgsim-common = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
