[package]
name = "nextgsim-nas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NAS protocol library for nextgsim"

[lints]
workspace = true

[dependencies]
nextgsim-common.workspace = true
nextgsim-crypto.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
num_enum.workspace = true
