[package]
name = "nextgsim-sctp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SCTP transport layer for nextgsim"

[lints]
workspace = true

[dependencies]
nextgsim-common.workspace = true
tokio.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
sctp-proto.workspace = true
