[package]
name = "nextgsim-ue"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "5G UE (User Equipment) simulator binary"

[lints]
workspace = true

[[bin]]
name = "nr-ue"
path = "src/main.rs"

[dependencies]
nextgsim-common.workspace = true
nextgsim-crypto.workspace = true
nextgsim-nas.workspace = true
nextgsim-rrc.workspace = true
nextgsim-rls.workspace = true
nextgsim-gtp.workspace = true

# 6G AI-native network function client crates (optional features for UE)
nextgsim-she = { workspace = true, optional = true }
nextgsim-nwdaf = { workspace = true, optional = true }
nextgsim-nkef = { workspace = true, optional = true }
nextgsim-isac = { workspace = true, optional = true }
nextgsim-agent = { workspace = true, optional = true }
nextgsim-fl = { workspace = true, optional = true }
nextgsim-semantic = { workspace = true, optional = true }

tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
bytes.workspace = true
rand.workspace = true
tun-rs.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
